tests: Mime-types are not case-sensitive

As per http://tools.ietf.org/html/rfc2045#section-5.1

"
The type, subtype, and parameter names are not case sensitive.  For
example, TEXT, Text, and TeXt are all equivalent top-level media
types.
"

https://bugs.freedesktop.org/show_bug.cgi?id=38415